feat(backend): harden security and profile-based configuration